--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,43 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.17.229.133
-    port: 2052
-    cipher: auto
-    uuid: 07a902d1-7c2d-47de-f2c5-c2236fc7cd46
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: usxm.inekokkk.top
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 156.146.38.163
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id003
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.19.138.73
-    port: 2052
-    cipher: auto
-    uuid: 3fdef482-3fba-47f9-af67-b3f5bf93ec4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/GQ2qE5Us9g
-      headers:
-        host: tw1bQiWSE4x.fzbqfrse.xyz
-  - &id004
     name: 🇱🇺_LU_卢森堡
     type: vmess
     server: 45.82.31.164
@@ -53,32 +16,10 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id005
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 212.102.47.198
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id006
-    name: 🇺🇸_US_美国_5
+  - &id002
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
-    cipher: auto
-    uuid: 07a902d1-7c2d-47de-f2c5-c2236fc7cd46
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: usxm.inekokkk.top
-  - &id007
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: s1c.v2.v001sss.xyz
+    server: 104.21.8.157
     port: 2082
     cipher: auto
     uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
@@ -90,63 +31,8 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id008
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 183.232.199.28
-    port: 44001
-    cipher: auto
-    uuid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaad
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇨🇦_CA_加拿大
-    type: ss
-    server: 23.162.200.213
-    port: 443
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
-  - &id010
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 38.114.114.143
-    port: 4444
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
-  - &id011
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: yes.cnmjcn.net
-    port: 16632
-    cipher: auto
-    uuid: 2b8cfb7b-d3e7-4525-8418-e13a9b8fd73b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: dcef278233434a15c3587ef998dd119d.mobgslb.tbcache.com
-  - &id012
+  - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 104.18.19.191
-    port: 2052
-    cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: helanv6cf.inekokkk.top
-  - &id013
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: 104.19.250.15
     port: 2052
@@ -160,7 +46,37 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id014
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id005
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: 104.18.19.191
+    port: 2052
+    cipher: auto
+    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: helanv6cf.inekokkk.top
+  - &id006
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
     server: 104.18.36.119
@@ -175,6 +91,50 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
+  - &id007
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: helanv6cf.inekokkk.top
+  - &id008
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 18.237.252.9
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
 proxy-groups:
   - name: PROXY
     type: select
@@ -211,10 +171,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -230,10 +186,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
   - name: SELECT
     type: select
     proxies:
@@ -247,10 +199,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
