--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,145 +6,7 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 104.21.69.44
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id003
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: russia.com
-    port: 8880
-    cipher: auto
-    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: sssub.v2.001.ssrsub.com
-  - &id004
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
-    type: vmess
-    server: 104.21.8.157
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 183.240.179.207
-    port: 30013
-    cipher: auto
-    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id007
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: russia.com
-    port: 2095
-    cipher: auto
-    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: sssub.v2.001.ssrsub.com
-  - &id008
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: hk.wish.ml
-    port: 2052
-    cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: in3.wish.ml
-  - &id009
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.136.245.240
-    port: 12910
-    cipher: auto
-    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id010
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: data-us-v1.shwjfkw.cn
-    port: 20401
-    cipher: auto
-    uuid: b1478e24-4916-3abe-8f17-15931012ecbe
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /debian
-      headers:
-        host: data-us-v1.shwjfkw.cn
-  - &id011
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
     server: 172.67.164.78
     port: 2052
@@ -158,110 +20,311 @@ proxies:
       path: /
       headers:
         host: in3.wish.ml
-  - &id012
-    name: 🇵🇱_PL_波兰_1
+  - &id002
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 104.21.69.44
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id003
+    name: 🇺🇸_US_美国_2
     type: ss
-    server: 51.77.53.200
-    port: 6697
-    password: TEzjfAYq2IjtuoS
+    server: 38.114.114.207
+    port: 8080
+    password: KixLvKzwjekG00rm
     cipher: aes-256-gcm
-  - &id013
-    name: 🇵🇱_PL_波兰_2
+  - &id004
+    name: 🇺🇸_US_美国_3
+    type: trojan
+    server: 23.142.200.175
+    port: 443
+    udp: true
+    password: 27876_t7d7f4e3f
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: 36.151.195.48
+    port: 20344
+    udp: true
+    password: TNDSJfNv
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇺🇸_US_美国_5
     type: ss
-    server: 51.77.53.200
+    server: 23.157.40.20
     port: 8119
     password: cdBIDV42DCwnfIN
     cipher: aes-256-gcm
-  - &id014
-    name: 🇵🇱_PL_波兰_3
+  - &id008
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: 183.240.179.207
+    port: 30013
+    cipher: auto
+    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇺🇸_US_美国_6
     type: ss
-    server: 51.77.53.200
-    port: 5004
-    password: g5MeD6Ft3CWlJId
+    server: 38.114.114.207
+    port: 7001
+    password: RexnBgU7EV5ADxG
     cipher: aes-256-gcm
-  - &id015
-    name: 🇵🇱_PL_波兰_4
+  - &id010
+    name: 🇺🇸_US_美国_7
     type: ss
-    server: 51.77.53.200
-    port: 4444
+    server: 23.157.40.20
+    port: 8080
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id011
+    name: 🇺🇸_US_美国_8
+    type: ss
+    server: 23.157.40.20
+    port: 8000
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id012
+    name: 🇺🇸_US_美国_9
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id013
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: russia.com
+    port: 8880
+    cipher: auto
+    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
+  - &id014
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id015
+    name: 🇺🇸_US_美国_11
+    type: ss
+    server: 23.157.40.29
+    port: 443
     password: pKEW8JPByTVTLtM
     cipher: aes-256-gcm
   - &id016
-    name: 🇵🇱_PL_波兰_5
+    name: 🇺🇸_US_美国_12
     type: ss
-    server: 51.77.53.200
-    port: 6379
-    password: zDNVedRFPQexG9v
+    server: 23.157.40.29
+    port: 9101
+    password: e4FCWrgpkji3QY
     cipher: aes-256-gcm
   - &id017
-    name: 🇧🇩_BD_孟加拉国
-    type: ss
-    server: 103.106.2.90
-    port: 8881
-    password: oxp4Xr64OKpXV127Zwtzl14P8L8PovqbFGPHbnbhRf7CxCSW1E
-    cipher: chacha20-ietf-poly1305
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
   - &id018
-    name: 🇺🇸_US_美国_5
+    name: 🇺🇸_US_美国_13
     type: ss
     server: 156.146.38.163
     port: 443
     password: shadowsocks
     cipher: aes-128-cfb
   - &id019
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id020
+    name: 🇺🇸_US_美国_14
     type: ss
     server: 52.88.161.5
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id020
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: upload.ir
-    port: 80
-    cipher: auto
-    uuid: 085f6281-5c4c-4a34-8b44-d65bc2e2b069
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: is3-vmess.sshmax.xyz
   - &id021
-    name: 🇺🇸_US_美国_8
+    name: 🇺🇸_US_美国_15
     type: ss
-    server: 212.102.47.198
+    server: 34.219.161.56
     port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
+    password: amazonskr05
+    cipher: aes-256-cfb
   - &id022
-    name: 🇮🇷_IR_伊朗
-    type: vmess
-    server: 91.107.130.229
-    port: 35262
-    cipher: auto
-    uuid: 2d5e5a73-8fa1-4c43-b67f-c0211ba34a03
-    alterId: 0
-    tls: false
+    name: 🇺🇸_US_美国_16
+    type: ss
+    server: 23.157.40.20
+    port: 6379
+    password: zDNVedRFPQexG9v
+    cipher: aes-256-gcm
+  - &id023
+    name: 🇺🇸_US_美国_17
+    type: ss
+    server: 169.197.142.120
+    port: 3389
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id024
+    name: 🇺🇸_US_美国_18
+    type: ss
+    server: 169.197.142.120
+    port: 5498
+    password: lGqs95QkFHo2NV
+    cipher: aes-256-gcm
+  - &id025
+    name: 🇺🇸_US_美国_19
+    type: ss
+    server: 169.197.142.120
+    port: 8888
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id026
+    name: 🇺🇸_US_美国_20
+    type: ss
+    server: 23.157.40.29
+    port: 8888
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id027
+    name: 🇺🇸_US_美国_21
+    type: ss
+    server: 23.157.40.20
+    port: 8881
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id028
+    name: 🇺🇸_US_美国_22
+    type: ss
+    server: 23.157.40.20
+    port: 5500
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id029
+    name: 🇺🇸_US_美国_23
+    type: ss
+    server: 23.157.40.29
+    port: 7307
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - &id030
+    name: 🇺🇸_US_美国_24
+    type: ss
+    server: 23.157.40.29
+    port: 6697
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id031
+    name: 🇺🇸_US_美国_25
+    type: ss
+    server: 23.157.40.29
+    port: 5004
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id032
+    name: 🇺🇸_US_美国_26
+    type: ss
+    server: 169.197.142.120
+    port: 7307
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - &id033
+    name: 🇺🇸_US_美国_27
+    type: ss
+    server: 169.197.142.120
+    port: 8882
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id034
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 18.134.233.122
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.burgerip.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id023
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 172.67.204.84
-    port: 80
-    cipher: auto
-    uuid: 753d0d83-3f5b-4821-860e-082f0b3db609
-    alterId: 0
-    tls: false
+    alpn:
+      - http/1.1
+  - &id035
+    name: 🇺🇸_US_美国_28
+    type: trojan
+    server: 3.18.116.167
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.burgerip.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: no1-vmess.sshmax.xyz
+    network: tcp
+    alpn:
+      - http/1.1
+  - &id036
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: ss
+    server: deepf.hjkdsak2.com
+    port: 20003
+    password: 99301d55-a41f-4919-986b-1435996533aa
+    cipher: chacha20-ietf-poly1305
 proxy-groups:
   - name: PROXY
     type: select
@@ -311,6 +374,19 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -339,6 +415,19 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -365,6 +454,19 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
